# mashgraph

./: CMakeLists.txt  README.md  main.cpp  model.h  render.h  shader.h
shaders/: bilbord_f.c  bilbord_v.c  cube_normals_f.c  cube_normals_shadow_f.c  cube_normals_shadow_v.c  cube_normals_v.c  mirror_f.c  post_f.c  post_v.c
